<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/register"
        android:layout_marginTop="130dp"
        />

    <EditText
        android:id="@+id/name_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:background="@drawable/button2"
        />
</LinearLayout>