<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailBookActivity">

    <ProgressBar
        android:id="@+id/pg_detail"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/bookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10sp"
        android:text="Total Price"
        />

    <TextView
        android:id="@+id/totalBookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="Rp0"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/borrow_date"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                />

            <Button
                android:id="@+id/btn_borrowdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/select_date"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/button"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_date"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                />

            <Button
                android:id="@+id/btn_returndate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/select_date"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/btn_requestBorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:textColor="#ffffff"
                android:text="Borrow"
                android:background="@drawable/button2"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>